Fixed word wrapping issue in Chrome

--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -58,3 +58,16 @@
 	}
 }
 
+.site-content {
+	@include make-row();
+	word-break: break-word;
+
+	.content-area {
+		@include make-md-column(9);
+	}
+
+	.widget-area {
+		@include make-md-column(3);
+	}
+}
+
